--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ body, html {
   <p>Flu burung adalah infeksi virus yang menyerang bukan hanya burung, tetapi juga manusia, dan hewan lain. Namun sebagian besar adalah unggas. H5N1 adalah bentuk paling umum dari flu burung.</p>
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
-      <img src="FLU BURUNG.png" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Bird flu" width="500" height="333">
+      <img src="FLU BURUNG.PNG" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Bird flu" width="500" height="333">
     </div>
 
     <!-- Hide this text on small devices -->
