--- a/tentang wabah.html
+++ b/tentang wabah.html
@@ -116,6 +116,21 @@ body, html {
 
 <p> Pada beberapa penderita, gejala lain yang juga dapat timbul antara lain muntah, sakit perut, diare, gusi berdarah, mimisan, nyeri dada, dan mata merah (konjungtivitis). Pada infeksi yang berat, flu burung bahkan bisa menyebabkan pneumonia, Acute Respiratory Distress Syndrome (ARDS), gagal napas, kejang, dan gangguan sistem saraf.</p>
   </div>
+    <div>
+  <h4 class="w3-center">Pencegahan Flu Burung</h4>
+</div>
+
+<div class="w3-col m6 w3-justify w3-padding-64">
+  <p>Dibawah ini merupakan beberapa cara pencegahan flu burung:</p>
+  <ul>
+    <li>Hindari kontak langsung dengan burung/unggas seperti di pasar dan peternakan, dimana lingkungan disana bisa tercemar oleh limbah dari unggas.</li>
+    <li>Jangan menyentuh burung yang sedang sakit atau sudah mati.</li>
+    <li>Mencuci tangan teratur, bisa mencegah penularan flu burung dan kuman lainnya. Bila Anda menyentuh kotoran dan liur burung, segera cuci tangan dengan sabun cuci tangan antibakteri dan air.</li>
+  </ul>
+</div>
+<div class="w3-container w3-padding-64 w3-col m6">
+  <img src="Cara-Pencegahan-Penyakit-Lupus.jpg" class="w3-round w3-image" alt="gambar tangan flu burung" width="800px" height="500px">
+</div>
   </div>
   <p class="w3-large w3-center w3-padding-16">Im really good at:</p>
   <p class="w3-wide"><i class="fa fa-camera"></i>Photography</p>
