--- a/tentang wabah.html
+++ b/tentang wabah.html
@@ -129,7 +129,7 @@ body, html {
   </ul>
 </div>
 <div class="w3-container w3-padding-64 w3-col m6">
-  <img src="Cara-Pencegahan-Penyakit-Lupus.jpg" class="w3-round w3-image" alt="gambar tangan flu burung" width="800px" height="500px">
+  <img src="Cara-Pencegahan-Penyakit-Lupus.jpg" class="w3-round w3-image" alt="gambar tangan" width="800px" height="500px">
 </div>
   </div>
   <p class="w3-large w3-center w3-padding-16">Im really good at:</p>
