--- a/tentang wabah.html
+++ b/tentang wabah.html
@@ -117,7 +117,7 @@ body, html {
 <p> Pada beberapa penderita, gejala lain yang juga dapat timbul antara lain muntah, sakit perut, diare, gusi berdarah, mimisan, nyeri dada, dan mata merah (konjungtivitis). Pada infeksi yang berat, flu burung bahkan bisa menyebabkan pneumonia, Acute Respiratory Distress Syndrome (ARDS), gagal napas, kejang, dan gangguan sistem saraf.</p>
   </div>
     <div>
-  <h4 class="w3-center">Pencegahan Flu Burung</h4>
+  <h4 class="w3-center"><b>Pencegahan Flu Burung</b></h4>
 </div>
 
 <div class="w3-col m6 w3-justify w3-padding-64">
@@ -130,6 +130,51 @@ body, html {
 </div>
 <div class="w3-container w3-padding-64 w3-col m6">
   <img src="Cara-Pencegahan-Penyakit-Lupus.jpg" class="w3-round w3-image" alt="gambar tangan" width="800px" height="500px">
+</div>
+
+<div>
+<h4 class="w3-center"><b>Cara Penularan Flu Burung</b></h4>
+</div>
+
+<div class="w3-col m6 w3-justify w3-padding-small">
+  <p>Flu burung ditularkan secara langsung antar burung (yang hidup maupun sudah mati) melalui feses, cairan, liur dan darahnya. Biasanya penularan antar manusia tidak bisa terjadi. Penularannya biasanya melalui burung ke manusia.
+Flu burung menular melalui kontak langsung dengan unggas yang sakit atau lingkungan yang terkontaminasi, seperti:
+</p>
+</div>
+
+<div class="w3-container w3-padding-small w3-col m6">
+  <img src="ilustrasi-flu-burung-edited.jpg" class="w3-round w3-image" alt="penularan" width="350px" height="196.5px">
+</div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<div class="w3-row-padding">
+  <div class="w3-col m3 w3-dark-grey w3-center"><p><b>1</b></p></div>
+  <div class="w3-col m3 w3-light-grey w3-center"><p><b>2</b></p></div>
+  <div class="w3-col m3 w3-dark-grey w3-center"><p><b>3</b></p></div>
+  <div class="w3-col m3 w3-light-grey w3-center"><p><b>4</b></p></div>
+</div>
+<div class="w3-padding-large w3-row-padding">
+  <div class="w3-col m3 w3-center">
+    <img src="ayam dipegang.png" class="w3-image" alt="ayam dipegang" width="1080px" height="1080px">
+    <p class="w3-justify">Menyentuh unggas yang telah terinfeksi, baik yang masih hidup maupun yang sudah mati.</p>
+</div>
+  <div class="w3-col m3 w3-center">
+    <img src="ayam-muntah.png" class="w3-image" alt="ayam muntah" width="1080px" height="1080px">
+    <p class="w3-justify">Kontak dengan cairan tubuh unggas yang sakit, misalnya ludah. Atau tidak sengaja menghirup percikan cairan tubuh tersebut.</p>
+  </div>
+  <div class="w3-col m3 w3-center">
+    <img src="ayam kotor dipegang.png" class="w3-image" alt="ayam kotor" width="1080px" height="1080px">
+    <p class="w3-justify">Kontak dengan debu dari kotoran unggas sakit yang telah mengering atau menghirupnya.</p>
+  </div>
+  <div class="w3-col m3 w3-center">
+    <img src="telor-mentah.png" class ="w3-image" alt="telur mentah" width="1080px" height="1080px">
+    <p class="w3-justify">Menyantap daging atau telurnya dengan tidak dimasak sampai benar-benar matang. Makan daging dan telur yang matang tidak akan membuat Anda tertular virus flu burung.</p>
+</div>
 </div>
   </div>
   <p class="w3-large w3-center w3-padding-16">Im really good at:</p>
