--- a/tentang wabah.html
+++ b/tentang wabah.html
@@ -136,7 +136,7 @@ body, html {
 <h4 class="w3-center"><b>Cara Penularan Flu Burung</b></h4>
 </div>
 
-<div class="w3-col m6 w3-justify w3-padding-small">
+<div class="w3-col m6 w3-justify w3-padding-large">
   <p>Flu burung ditularkan secara langsung antar burung (yang hidup maupun sudah mati) melalui feses, cairan, liur dan darahnya. Biasanya penularan antar manusia tidak bisa terjadi. Penularannya biasanya melalui burung ke manusia.
 Flu burung menular melalui kontak langsung dengan unggas yang sakit atau lingkungan yang terkontaminasi, seperti:
 </p>
