--- a/tentang wabah.html
+++ b/tentang wabah.html
@@ -319,7 +319,7 @@ Flu burung menular melalui kontak langsung dengan unggas yang sakit atau lingkun
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-  <p>Created by Krisna Yudha Pratama, Brigitta Natasha Widiaputri, & Rahmania Nur Diniyah</p><br><p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</p>
+  <p>Created by Krisna Yudha Pradana, Brigitta Natasha Widiaputri, & Rahmania Nur Diniyah</p><br><p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</p>
 
 </footer>
  
