--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@ body, html {
 
 <!-- Container (Portfolio Section) -->
 <div class="w3-content w3-container w3-padding-64" id="portfolio">
-  <p class="w3-center"><em>Here are some picture of Avian Influenza.<br> Click on the images to make them bigger</em></p>
+  <p class="w3-center"><em>Here are some picture of Avian Influenza.<br> Click on the images to make them bigger</em></p><br>
+
   <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
   <div class="w3-row-padding w3-center">
     <div class="w3-col m3">
@@ -146,7 +147,19 @@ body, html {
     </div>
   </div>
 </div>
+
+<!-- Modal for full size images on click-->
+<div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
+  <span class="w3-button w3-large w3-black w3-display-topright" title="Close Modal Image"><i class="fa fa-remove"></i></span>
+  <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
+    <img id="img01" class="w3-image">
+    <p id="caption" class="w3-opacity w3-large"></p>
+  </div>
+</div>
+
 <!-- Second Parallax Image with Portfolio Text -->
+<h2 class="w3-center"><b>OUR CONTENT</b></h2>
+<p class="w3-center"><em>Click on the text to navigate to the page</em></p><br>
 <div class="bgimg-2 w3-display-container w3-opacity-min">
   <div class="w3-display-middle">
      <a href="tentang wabah.html" style="text-decoration:none"><span class="w3-xxlarge w3-black w3-text-white w3-wide w3-button w3-hover-gray">Tentang Wabah</span></a>
