--- a/tentang wabah.html
+++ b/tentang wabah.html
@@ -183,7 +183,7 @@ Flu burung menular melalui kontak langsung dengan unggas yang sakit atau lingkun
   <p>Pasien yang telah terbukti menderita flu burung akan dirawat di ruang isolasi di rumah sakit untuk menghindari penularan. Pasien dianjurkan untuk minum banyak cairan, mengkonsumsi makanan sehat, istirahat, dan minum obat pereda rasa sakit, dokter juga biasanya akan memberikan obat-obatan antivirus agar penyakit tidak berkembang makin parah. Contoh obat-obatan antivirus yang bisa diberikan dalam kasus flu burung adalah oseltamivir dan zanamivir.</p>
 </div>
 <div class="w3-container w3-padding-64 w3-col m6">
-  <img src="Pengobatan1.jpg" class="w3-round w3-image" alt="gambar obat" width="400px" height="50px">
+  <img src="pengobatan1.jpg" class="w3-round w3-image" alt="gambar obat" width="400px" height="50px">
 </div>
 
     </div>
