--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body, html {
 
 /* Second image (Portfolio) */
 .bgimg-2 {
-  background-image: url("fluburung2.jpg");
+  background-image: url("fluburung2.jpeg");
   min-height: 400px;
 }
 
