--- a/tentang wabah.html
+++ b/tentang wabah.html
@@ -185,6 +185,31 @@ Flu burung menular melalui kontak langsung dengan unggas yang sakit atau lingkun
 <div class="w3-container w3-padding-64 w3-col m6">
   <img src="pengobatan1.jpg" class="w3-round w3-image" alt="gambar obat" width="400px" height="50px">
 </div>
+<div class="w3-row w3-padding-32">
+      <div class="w3-third">
+        <p>1. Jika positif Flu burung</p>
+        <img src="positif1.jpg" class="w3-round w3-margin-bottom" alt="orang positif" style="width:60%">
+      </div>
+      <div class="w3-third">
+        <p>2. Harus isolasi </p>
+        <img src="isolasi1.jpg" class="w3-round w3-margin-bottom" alt="isolasi" style="width:60%">
+      </div>
+      <div class="w3-third">
+        <p>3. Harus minum banyak cairan</p>
+        <img src="cairan.jpg" class="w3-round" alt="Minum cairan" style="width:60%">
+  </div>
+  <div class="w3-row w3-padding-32">
+      <div class="w3-third">
+        <p>4. Harus makan makanan sehat</p>
+        <img src="makanansehat2.png" class="w3-round w3-margin-bottom" alt="Makanan sehat" style="width:60%">
+      </div>
+      <div class="w3-third">
+        <p>5. Harus istirahat</p>
+        <img src="istirahat.jpg" class="w3-round w3-margin-bottom" alt="istirahat" style="width:60%">
+      </div>
+      <div class="w3-third">
+        <p>6. Minum obat-obatan</p>
+        <img src="obat2.jpg" class="w3-round" alt="obat" style="width:60%">
 
     </div>
     </div>
