--- a/penanggulangan.html
+++ b/penanggulangan.html
@@ -102,14 +102,57 @@ body, html {
 
     <!-- Hide this text on small devices -->
     <div class="w3-col m6 w3-padding-large">
-      <p>Pemerintah menyusun strategi untuk menyetop penyebaran flu burung yang terus merenggut korban jiwa. Satu di antaranya dengan memusnahkan unggas di perkotaan yang berada dalam radius satu kilometer dari unggas yang dipastikan terjangkit virus avian influenza. 
+      <p>Peran Pemerintah dalam menanggapi flu burung
 
-Pemerintah juga memvaksinasi setiap unggas di radius tiga kilometer dari unggas yang terjangkit flu burung. Hal ini terutama akan dilakukan di perkotaan di lima provinsi yakni Jawa Barat, DKI Jakarta, Lampung, Banten, dan Jawa Tengah. Persediaan obat antiflu burung atau Tamiflu pun ditambah. 
 
-Pemerintah melibatkan semua masyarakat demi lancarnya program ini. Strategi lain adalah mengendalikan penyebaran wabah maupun infeksi baru pada unggas. Salah satu caranya dengan menjaga sanitasi kandang sehingga kelompok berisiko tinggi seperti peternak juga dapat terhindar dari virus avian influenza.
+Pemerintah menyusun strategi baru untuk menyetop penyebaran flu burung yang terus merenggut korban jiwa. Satu di antaranya dengan memusnahkan unggas di perkotaan yang berada dalam radius satu kilometer dari unggas yang dipastikan terjangkit virus avian influenza.
 
-Direktur Pemberantasan Penyakit Bersumber Binatang Departemen Kesehatan Hariadi Wibisono, siang tadi, telah memberikan penyuluhan kepada tim kesehatan dan masyarakat untuk menyosialisasikan program ini.
-</p>
+
+Pemerintah juga akan memvaksinasi setiap unggas di radius tiga kilometer dari unggas yang terjangkit flu burung. Hal ini terutama akan dilakukan di perkotaan di lima provinsi yakni Jawa Barat, DKI Jakarta, Lampung, Banten, dan Jawa Tengah. Persediaan obat antiflu burung atau Tamiflu pun akan ditambah. Saat ini pemerintah mempunyai persediaan 160.000 tablet Tamiflu dan rencananya ditambah lagi 200.000 tablet.
+
+
+Pemerintah akan melibatkan semua masyarakat demi lancarnya program ini. Strategi lain adalah mengendalikan penyebaran wabah maupun infeksi baru pada unggas. Salah satu caranya dengan menjaga sanitasi kandang sehingga kelompok berisiko tinggi seperti peternak juga dapat terhindar dari virus avian influenza.
+
+
+Presiden meminta masyarakat tak perlu resah namun tetap waspada terhadap penyakit yang bersumber pada unggas itu. Lebih lanjut, presiden juga meminta masyarakat agar tidak mudah terpengaruh isu-isu yang menyesatkan mengenai flu burung. Pemerintah berupaya melindungi warga serta sumberdaya hayati hewan, khususnya di wilayah NKRI, dari penyakit hewan menular utama flu burung (Avian influenza/AI) dengan melakukan berbagai langkah antisipasi melalui pengendalian terhadap lalu lintas ternak unggas dan produk unggas dari dan ke wilayah NKRI secara ketat. Sebagai contoh, pada 27 April 2005, Departemen Pertanian melalui Dirjen Peternakan mengeluarkan Surat Edaran No. 1403/HK.340/F/04.2005 tentang pelarangan pemasukan komoditas unggas, bahan asal unggas dan asil bahan asal unggas dari Malaysia ke dalam wilayah negara Republik Indonesia. Seperti himbauan Pemerintah, warga tidak perlu takut mengkonsumsi telur dan daging ayam serta produk ternak unggas lainnya. Sebab, bila dimasak dengan benar penyakit flu burung tidak perlu dikhawatirkan.
+
+
+Konsumsi produk ternak unggas dengan aman. Untuk mengkonsumsi daging ayam, masak daging pada suhu mendidih lebih dari 1 menit, karena virus AI akan mati pada suhu 80 derajat celcius pada pemanasan selama 1 menit. Sedangkan untuk merebus telur dapat dilakukan pada suhu di atas 64 derajat celcius selama 6 menit, karena virus akan mati pada suhu 64 derajat celcius pada pemanasan selama 4,5 menit).
+
+
+Prinsip dasar yang diterapkan dalam pencegahan, pengendalian, dan pemberantasan Avian influenza atau flu burung, adalah:
+
+Mencegah kontak antara hewan peka dengan virus AI (Avian influenza)
+Menghentikan produksi virus AI oleh unggas tertular (menghilangkan virus AI dengan dekontaminasi/ disinfeksi)
+Meningkatkan resistensi (pengebalan) dengan vaksinasi
+Menghilangkan sumber penularan virus, dan
+Peningkatan kesadaran masyarakat (public awareness)
+Dalam pelaksanaannya, dapat dilakukan melalui 9 tindakan yang merupakan satu kesatuan satu sama lainnya yang tidak dapat dipisahkan, yaitu:
+
+Peningkatan biosekuriti
+Vaksinasi
+Depopulasi (pemusnahan terbatas atau selektif) di daerah tertular
+Pengendalian lalu lintas keluar masuk unggas
+Surveillans dan penelusuran (tracking back)
+Pengisian kandang kembali (restocking)
+Stamping out (pemusnahan menyeluruh) di daerah tertular baru
+Peningkatan kesadaran masyarakat (public awareness)
+Monitoring dan evaluasi
+Adapun cara untuk meningkatan kesadaran masyarakat (public awareness) yaitu dengan cara :
+
+Jagalah agar ternak unggas dalam kondisi baik, antara lain, mempunyai akses ke air bersih dan makanan yang memadai, kandang yang memadai, menerima produk-produk yang bebas cacing dan sudah divaksinasi
+Jagalah ternak agar selalu berada di lingkungan yang terlindung
+Periksalah barang-barang yang masuk ke dalam peternakan
+Peliharalah ternak di tempat yang terlindungi
+Jangan membeli atau menerima hewan baru ke dalam peternakan
+Batasi dan kendalikan orang yang masuk ke peternakan
+Sapu pekarangan, bersihkan kandang, peralatan, sepeda motor secara berkala
+Simpan pupuk kandang (jauhkan dari kolam, sumur, dll)
+Action plan yang dapat dilakukan untuk meminimalisir penyebaran wabah flu burung yaitu:
+
+Tracing masyarakat yg datang dari wilayah yg terinfeksi virus flu burung
+Menahan pergerakan masyarakat di daerah terinfeksi
+Pemantauan peternakan unggas unggas yang berpotensi terinfeksi</p>
     </div>
     <div class="w3-col m6 w3-padding-large">
       <p>Action plan yang dapat dilakukan untuk meminimalisir penyebaran wabah flu burung yaitu:
