--- a/penanggulangan.html
+++ b/penanggulangan.html
@@ -85,7 +85,7 @@ body, html {
 <!-- First Parallax Image with Logo Text -->
 <div class="bgimg-1 w3-display-container w3-opacity-min w3-animation-top" id="home">
   <div class="w3-display-middle" style="white-space:nowrap;">
-    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">Penanggulangan <span class="w3-hide-small">Avian Influenza</span> 
+    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">Penanggulangan <span class="w3-hide-small"></span> 
   </div>
 </div>
 
@@ -156,7 +156,20 @@ Simpan pupuk kandang (jauhkan dari kolam, sumur, dll)
 <li>Menghilangkan sumber penularan virus.</li>
 <li>Peningkatan kesadaran masyarakat (public awareness).</li>
     </div>
-  
+    <div>
+<p>
+ Adapun cara untuk meningkatan kesadaran masyarakat (public awareness) yaitu dengan cara :
+</p>
+      <li>Jagalah agar ternak unggas dalam kondisi baik, antara lain, mempunyai akses ke air bersih dan makanan yang memadai, kandang yang memadai, menerima produk-produk yang bebas cacing dan sudah divaksinasi</li>
+      <li>Jagalah ternak agar selalu berada di lingkungan yang terlindung</li>
+      <li>Periksalah barang-barang yang masuk ke dalam peternakan</li>
+      <li>Peliharalah ternak di tempat yang terlindungi</li>
+      <li>Jangan membeli atau menerima hewan baru ke dalam peternakan</li>
+      <li>Batasi dan kendalikan orang yang masuk ke peternakan</li>
+      <li>Sapu pekarangan, bersihkan kandang, peralatan, sepeda motor secara berkala</li>
+      <li>Simpan pupuk kandang (jauhkan dari kolam, sumur, dll)</li>
+
+    </div>
       </form>
     </div>
   </div>
