--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body, html {
 }
 
 /* Create a Parallax Effect */
-.bgimg-1, .bgimg-2, .bgimg-3 {
+.bgimg-1, .bgimg-2, .bgimg-3, .bgimg-4 {
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -42,7 +42,7 @@ body, html {
 
 /* Fourth image (Contact) */
 .bgimg-4 {
-  background-image: url("ayam.jpg");
+  background-image: url("Header ayam penanggulangan.jpg");
   min-height: 400px;
 }
 
