--- a/penanggulangan.html
+++ b/penanggulangan.html
@@ -158,7 +158,7 @@ Simpan pupuk kandang (jauhkan dari kolam, sumur, dll)
     </div>
     <div>
 <p>
- Adapun cara untuk meningkatan kesadaran masyarakat (public awareness) yaitu dengan cara :
+ Adapun cara untuk meningkatan kesadaran masyarakat (public awareness) yaitu dengan cara cara seperti:
 </p>
       <li>Jagalah agar ternak unggas dalam kondisi baik, antara lain, mempunyai akses ke air bersih dan makanan yang memadai, kandang yang memadai, menerima produk-produk yang bebas cacing dan sudah divaksinasi</li>
       <li>Jagalah ternak agar selalu berada di lingkungan yang terlindung</li>
