--- a/penanggulangan.html
+++ b/penanggulangan.html
@@ -148,7 +148,7 @@ Simpan pupuk kandang (jauhkan dari kolam, sumur, dll)
 <li>Pemantauan peternakan unggas-unggas yang berpotensi terinfeksi.</li>
     </div>
     <div class="w3-col m6 w3-padding-large">
-      <p>Prinsip dasar yang diterapkan dalam pencegahan, pengendalian, dan pemberantasan Avian Influenza atau flu burung, adalah:
+      <p>Prinsip dasar yang diterapkan dalam pencegahan, pengendalian, dan pemberantasan Avian Influenza atau flu burung, antara lain:
 </p>
 <li>Mencegah kontak antara hewan peka dengan virus AI (Avian Influenza).</li>
 <li>Menghentikan produksi virus AI oleh unggas tertular (menghilangkan virus AI dengan dekontaminasi/ disinfeksi).</li>
