--- a/penanggulangan.html
+++ b/penanggulangan.html
@@ -24,13 +24,13 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-  background-image: url('ayam.jpg');
+  background-image: url('Header ayam penanggulangan.jpg');
   min-height: 400px
 }
 
 /* Second image (Portfolio) */
 .bgimg-2 {
-  background-image: url("ayam.jpg");
+  background-image: url("Header ayam penanggulangan.jpg");
   min-height: 400px;
 }
 
