--- a/tentang wabah.html
+++ b/tentang wabah.html
@@ -93,8 +93,13 @@ body, html {
 </div>
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
-      <p><b>Gejala Flu Burung</b></p><br>
-      <img src="sakit.jpg" class="w3-round w3-image w3-image" alt="flu burung" width="1000px" height="666px">
+      </div>
+  </div>
+  <h4 class="w3-center"><b>Gejala Flu Burung</b></h4>
+
+<div class="w3-container w3-padding-64 w3-col m6">
+      
+      <img src="sakit.jpg" class="w3-round w3-image" alt="flu burung" width="1000px" height="666px">
     </div>
 
     <!-- Hide this text on small devices -->
