--- a/tentang wabah.html
+++ b/tentang wabah.html
@@ -170,15 +170,15 @@ Flu burung menular melalui kontak langsung dengan unggas yang sakit atau lingkun
 </div>
   <div class="w3-col m3 w3-center">
     <img src="ayam-muntah.png" class="w3-image" alt="ayam muntah" width="1080px" height="1080px">
-    <p class="w3-justify">Kontak dengan cairan tubuh unggas yang sakit, misalnya ludah. Atau tidak sengaja menghirup percikan cairan tubuh tersebut.</p>
+    <p class="w3-justify">Kontak dengan cairan tubuh unggas yang sakit, misalnya air ludah. Atau tidak sengaja menghirup percikan cairan tubuh tersebut.</p>
   </div>
   <div class="w3-col m3 w3-center">
     <img src="ayam kotor dipegang.png" class="w3-image" alt="ayam kotor" width="1080px" height="1080px">
-    <p class="w3-justify">Kontak dengan debu dari kotoran unggas sakit yang telah mengering atau menghirupnya.</p>
+    <p class="w3-justify">Kontak dengan debu dari kotoran unggas yang sakit yang telah mengering atau menghirupnya.</p>
   </div>
   <div class="w3-col m3 w3-center">
     <img src="telor-mentah.png" class ="w3-image" alt="telur mentah" width="1080px" height="1080px">
-    <p class="w3-justify">Menyantap daging atau telurnya dengan tidak dimasak sampai benar-benar matang. Makan daging dan telur yang matang tidak akan membuat Anda tertular virus flu burung.</p>
+    <p class="w3-justify">Menyantap daging atau telurnya dengan tidak dimasak sampai benar-benar matang. Menkonsumsi daging dan telur yang matang tidak akan membuat Anda tertular virus flu burung.</p>
 </div>
   </div>
   <h4 class="w3-center"><b>Pengobatan Flu Burung</b></h4>
