--- a/about us.html
+++ b/about us.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Avian Influenza</title>
+<title>Flu Burung</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -24,26 +24,8 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-  background-image: url("Header ayam.jpg");
+  background-image: url("team.jpg");
   min-height: 400px
-}
-
-/* Second image (Portfolio) */
-.bgimg-2 {
-  background-image: url("ayam.jpg");
-  min-height: 400px;
-}
-
-/* Third image (Contact) */
-.bgimg-3 {
-  background-image: url("petasebaran.jpg");
-  min-height: 400px;
-}
-
-/* Fourth image (Contact) */
-.bgimg-4 {
-  background-image: url("Stop virus.jpg");
-  min-height: 400px;
 }
 
 .w3-wide {letter-spacing: 10px;}
@@ -78,120 +60,115 @@ body, html {
     <a href="tentang wabah.html" class="w3-bar-item w3-button" onclick="toggleFunction()">TENTANG WABAH</a>
     <a href="penyebaran.html" class="w3-bar-item w3-button" onclick="toggleFunction()">PENYEBARAN</a>
     <a href="penanggulangan.html" class="w3-bar-item w3-button" onclick="toggleFunction()">PENANGGULANGAN</a>
-    <a href="profil.html" class="w3-bar-item w3-button">Tentang</a>
+    <a href="profil.html" class="w3-bar-item w3-button">ABOUT US</a>
   </div>
 </div>
 
 <!-- First Parallax Image with Logo Text -->
 <div class="bgimg-1 w3-display-container w3-opacity-min w3-animate-top" id="home">
   <div class="w3-display-middle" style="white-space:nowrap;">
-    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">About<span class="w3-hide-small">Us</span> 
+    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">ABOUT<span class="w3-hide-small"> US</span> 
   </div>
 </div>
 
 <!-- Container (About Section) -->
 <div class="w3-content w3-container w3-padding-64" id="about">
-  <h3 class="w3-center">FLU BURUNG</h3>
-  <p class="w3-center"><em>H5N1</em></p>
-  <p>Flu burung adalah infeksi virus yang menyerang bukan hanya burung, tetapi juga manusia, dan hewan lain. Namun sebagian besar adalah unggas. H5N1 adalah bentuk paling umum dari flu burung.</p>
-  <div class="w3-row">
-    <div class="w3-col m6 w3-center w3-padding-large">
-      <p><b>Penyebaran Flu Burung</b></p><br>
-      <img src="Foto flu burung 1.jpg" class="w3-round w3-image" alt="Flu burung" width="500" height="333">
-    </div>
-
-    <!-- Hide this text on small devices -->
-    <div class="w3-col m6 w3-padding-large">
-      <p>Wabah flu burung pertama kali ditemukan di Italia pada 1878. Tetapi baru dikenali dalam wabah besar yang melanda peternakan ayam di Amerika Serikat (AS) pada 1924-1925. 
-Saat itu flu burung masih menular di antara unggas dan belum terjadi penularan ke hewan lain. Pada Maret 1997, flu burung dari subtipe H5N1 mulai menjangkiti peternakan ayam di Hongkong. 
-Dua bulan kemudian, flu itu menular ke seorang anak laki-laki berusia tiga tahun. Selanjutnya, 17 orang terjangkit virus yang sama di Hong Kong pada Desember 1997. 
-Lalu pemerintah mulai membinasakan 1,5 juta ayam. Pada Februari 2003, virus flu burung H5N1 kembali menyerang Hongkong dan menulari dua orang. Sampai 2004 hampir di seluruh dunia flu burung pada unggas telah mewabah. 
- Virus H5N1 kemudian menjadi perhatian utama para ahli, karena dapat bermutasi dengan cepat. Virus itu juga mampu berubah menjadi beberapa subtipe virus yang baru sehingga dapat menular ke spesies lain, termasuk manusia. 
-    </p>
-    </div>
-  </div>
-  <p class="w3-large w3-center w3-padding-16">Im really good at:</p>
-  <p class="w3-wide"><i class="fa fa-camera"></i>Photography</p>
-  <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:90%">90%</div>
-  </div>
-  <p class="w3-wide"><i class="fa fa-laptop"></i>Web Design</p>
-  <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:85%">85%</div>
-  </div>
-  <p class="w3-wide"><i class="fa fa-photo"></i>Photoshop</p>
-  <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:75%">75%</div>
-  </div>
+  <h3 class="w3-center"><b>Avian Influenza Team</b></h3>
+  <p class="w3-center"><em>Group 1 of XI-8</em></p>
+  <img src="logo.png" class="w3-image w3-padding-large" style=" display: block; margin-left: auto; margin-right: auto; width: 50%;" height="500" width="500" alt="Avian Influenza" >
 </div>
 
-<div class="w3-row w3-center w3-dark-grey w3-padding-16">
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">14+</span><br>
-    Partners
+<div class="w3-row">
+  <div class="w3-col l3 s6 w3-white">
+    <div class="w3-card-4 w3-margin w3-round w3-hover-dark-gray w3-center">
+      <img src="Foto irza.jpeg" style="width:100%">
+        <div class="w3-container">
+           <h5>Irza Muhamma</h5>
+          <p><b>Co-Leader</b></p>
+          <p><a href="https://hilmidaffaw.github.io" class="fa fa-github w3-hover-opacity"> hilmidaffaw </a></p>
+        </div>
+    </div>
   </div>
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">55+</span><br>
-    Projects Done
+
+  <div class="w3-col l3 s6 w3-white">
+    <div class="w3-card-4 w3-margin w3-round w3-hover-dark-gray w3-center">
+      <img src="foto daffa.jpeg" style="width:100%">
+        <div class="w3-container">
+          <h5>Hilmi Daffa Windardi</h5>
+          <p><b>Co-Leader</b></p>
+          <p><a href="https://hilmidaffaw.github.io" class="fa fa-github w3-hover-opacity"> hilmidaffaw </a></p>
+        </div>
+    </div>
   </div>
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">89+</span><br>
-    Happy Clients
+
+  <div class="w3-col l3 s6 w3-white">
+    <div class="w3-card-4 w3-margin w3-round w3-hover-dark-gray w3-center">
+      <img src="foto alvin.jpeg" style="width:100%">
+        <div class="w3-container">
+          <p>Alvin Taniharja</p>
+          <p><b>Content Manager</b></p>
+          <p><a href="https://alvintaniharja.github.io" class="fa fa-github w3-hover-opacity"> alvintaniharja </a></p>
+        </div>
+    </div>
   </div>
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">150+</span><br>
-    Meetings
+
+  <div class="w3-col l3 s6 w3-white">
+    <div class="w3-card-4 w3-margin w3-round w3-hover-dark-gray w3-center">
+      <img src="Foto brigi.jpeg" style="width:100%">
+        <div class="w3-container">
+          <p>Brigitta Natasha Widiaputri</p>
+          <p><b>Content Manager</b></p>
+          <p><a href="https://brigittanatashap.github.io" class="fa fa-github w3-hover-opacity"> BrigittaNatashaP </a></p>
+        </div>
+    </div>
   </div>
 </div>
+  
+  <br>
 
-<!-- Second Parallax Image with Portfolio Text -->
-<div class="bgimg-2 w3-display-container w3-opacity-min">
-  <div class="w3-display-middle">
-     <a href="tentang wabah.html" ><span class="w3-xxlarge w3-text-white w3-wide">Tentang Wabah</span></a>
+<div class="w3-row">
+  <div class="w3-col l3 s6 w3-white">
+    <div class="w3-card-4 w3-margin w3-round w3-hover-dark-gray w3-center">
+      <img src="Foto Sabina.jpeg" style="width:100%">
+        <div class="w3-container">
+          <p>Sabina Cahya Rianti</p>
+          <p><b>Content Manager</b></p>
+          <p><a href="https://sabinacahya.github.io" class="fa fa-github w3-hover-opacity"> sabinacahya </a></p>
+        </div>
+    </div>
   </div>
-</div>
-
-<!-- Container (Portfolio Section) -->
-<div class="w3-content w3-container w3-padding-64" id="portfolio">
-  <h3 class="w3-center">MY WORK</h3>
-  <p class="w3-center"><em>Here are some of my latest lorem work ipsum tipsum.<br> Click on the images to make them bigger</em></p><br>
-
-  <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
-  <div class="w3-row-padding w3-center">
-    <div class="w3-col m3">
-      <img src="/w3images/p1.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist over the mountains">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="/w3images/p2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Coffee beans">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="/w3images/p3.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Bear closeup">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="/w3images/p4.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Quiet ocean">
+  
+  <div class="w3-col l3 s6 w3-white">
+    <div class="w3-card-4 w3-margin w3-round w3-hover-dark-gray w3-center">
+      <img src="foto krisna.jpeg" style="width:100%">
+        <div class="w3-container">
+          <p>Krisna Yudha Pradana</p>
+          <p><b>Programmer</b></p>
+          <p><a href="https://krisnayudha64.github.io" class="fa fa-github w3-hover-opacity"> krisnayudha64 </a></p>
+        </div>
     </div>
   </div>
 
-  <div class="w3-row-padding w3-center w3-section">
-    <div class="w3-col m3">
-      <img src="/w3images/p5.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist">
+  <div class="w3-col l3 s6 w3-white">
+    <div class="w3-card-4 w3-margin w3-round w3-hover-dark-gray w3-center">
+      <img src="Foto imel.jpeg" style="width:100%">
+        <div class="w3-container">
+          <p>Maretia Imelda</p>
+          <p><b>Programmer</b></p>
+           <p><a href="https://instagram.com/imell_444/" class="fa fa-instagram w3-hover-opacity"> @imell_444 </a></p>
+        </div>
     </div>
+  </div>
 
-    <div class="w3-col m3">
-      <img src="/w3images/p6.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="My beloved typewriter">
+  <div class="w3-col l3 s6 w3-white">
+    <div class="w3-card-4 w3-margin w3-round w3-hover-black w3-center">
+      <img src="Foto dini.jpeg" style="width:100%">
+        <div class="w3-container">
+          <a href=""></a><p>Rahmania Nur Diniyah</p>
+          <p><b>Programmer</b></p>
+          <p><a href="https://instagram.com/rahmaniand29/" class="fa fa-instagram w3-hover-opacity"> @rahmania29 </a></p>
+        </div>
     </div>
-
-    <div class="w3-col m3">
-      <img src="/w3images/p7.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Empty ghost train">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="/w3images/p8.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Sailing">
-    </div>
-    <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD MORE</button>
   </div>
 </div>
 
@@ -204,65 +181,10 @@ Lalu pemerintah mulai membinasakan 1,5 juta ayam. Pada Februari 2003, virus flu 
   </div>
 </div>
 
-<!-- Third Parallax Image with Portfolio Text -->
-<div class="bgimg-3 w3-display-container w3-opacity-min">
-  <div class="w3-display-middle">
-     <span class="w3-xxlarge w3-text-white w3-wide">Penyebaran</span>
-  </div>
-</div>
-
-<!-- Fourth Parallax Image with Portfolio Text -->
-<div class="bgimg-3 w3-display-container w3-opacity-min">
-  <div class="w3-display-middle">
-     <span class="w3-xxlarge w3-text-white w3-wide">Pencegahan</span>
-  </div>
-</div>
-
-<!-- Container (Contact Section) -->
-<div class="w3-content w3-container w3-padding-64" id="contact">
-  <h3 class="w3-center">WHERE I WORK</h3>
-  <p class="w3-center"><em>I'd love your feedback!</em></p>
-
-  <div class="w3-row w3-padding-32 w3-section">
-    <div class="w3-col m4 w3-container">
-      <img src="/w3images/map.jpg" class="w3-image w3-round" style="width:100%">
-    </div>
-    <div class="w3-col m8 w3-panel">
-      <div class="w3-large w3-margin-bottom">
-        <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Chicago, US<br>
-        <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: +00 151515<br>
-        <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: mail@mail.com<br>
-      </div>
-      <p>Swing by for a cup of <i class="fa fa-coffee"></i>, or leave me a note:</p>
-      <form action="/action_page.php" target="_blank">
-        <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
-          <div class="w3-half">
-            <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
-          </div>
-          <div class="w3-half">
-            <input class="w3-input w3-border" type="text" placeholder="Email" required name="Email">
-          </div>
-        </div>
-        <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
-        <button class="w3-button w3-black w3-right w3-section" type="submit">
-          <i class="fa fa-paper-plane"></i> SEND MESSAGE
-        </button>
-      </form>
-    </div>
-  </div>
-</div>
-
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-  <div class="w3-xlarge w3-section">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-snapchat w3-hover-opacity"></i>
-    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
-  </div>
+  <p>Created by Hilmi Daffa Windardi</p>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 </footer>
  
