--- a/penanggulangan.html
+++ b/penanggulangan.html
@@ -136,15 +136,15 @@ Periksalah barang-barang yang masuk ke dalam peternakan
 Peliharalah ternak di tempat yang terlindungi
 Jangan membeli atau menerima hewan baru ke dalam peternakan
 Batasi dan kendalikan orang yang masuk ke peternakan
-Sapu pekarangan, bersihkan kandang, peralatan, sepeda motor secara berkala
-Simpan pupuk kandang (jauhkan dari kolam, sumur, dll)
+Menyapu pekarangan, membersihkan kandang, peralatan, dan sepeda motor secara berkala
+Menyimpan pupuk kandang (jauhkan dari kolam, sumur, dll)
 </p>
     </div>
     <div class="w3-col m6 w3-padding-large">
       <p>Action plan yang dapat dilakukan untuk meminimalisir penyebaran wabah flu burung yaitu:
 </p>
 <li>Tracing masyarakat yang datang dari wilayah yang terinfeksi virus flu burung.</li>    
-<li>Menahan pergerakan masyarakat di daerah terinfeksi.</li>
+<li>Menahan pergerakan masyarakat di daerah yang terindikasi terinfeksi.</li>
 <li>Pemantauan peternakan unggas-unggas yang berpotensi terinfeksi.</li>
     </div>
     <div class="w3-col m6 w3-padding-large">
@@ -158,7 +158,7 @@ Simpan pupuk kandang (jauhkan dari kolam, sumur, dll)
     </div>
     <div>
 <p>
- Adapun cara untuk meningkatan kesadaran masyarakat (public awareness) yaitu dengan cara cara seperti:
+ Adapun beberapa cara yang dilakukan untuk meningkatan kesadaran masyarakat (public awareness) yaitu dengan cara cara seperti:
 </p>
       <li>Jagalah agar ternak unggas dalam kondisi baik, antara lain, mempunyai akses ke air bersih dan makanan yang memadai, kandang yang memadai, menerima produk-produk yang bebas cacing dan sudah divaksinasi</li>
       <li>Jagalah ternak agar selalu berada di lingkungan yang terlindung</li>
@@ -186,7 +186,7 @@ Simpan pupuk kandang (jauhkan dari kolam, sumur, dll)
     <i class="fa fa-twitter w3-hover-opacity"></i>
     <i class="fa fa-linkedin w3-hover-opacity"></i>
   </div>
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+  <p>Thank you<a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 </footer>
  
 <script>
