--- a/penyebaran.html
+++ b/penyebaran.html
@@ -71,6 +71,7 @@ body, html {
   </div>
 </div>
 
+<div class="w3-content w3-container w3-padding-64" id="flu burung">
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
       <p><b>Penyebaran Flu Burung</b></p><br>
