--- a/penyebaran.html
+++ b/penyebaran.html
@@ -71,6 +71,7 @@ body, html {
   </div>
 </div>
 
+<!-- Container (About Section) -->
 <div class="w3-content w3-container w3-padding-64" id="flu burung">
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
@@ -90,7 +91,7 @@ Lalu pemerintah mulai membinasakan 1,5 juta ayam. Pada Februari 2003, virus flu 
 
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-col-bottom w3-padding-large">
-      <br><br><br><br><br><p>Selain Amerika Serikat dan kawasan Asia,  negara-negara yang pernah mengalami wabah flu burung antara lain Skotlandia, Inggris, Kanada, Australia, Jerman, Irlandia, Meksiko, Italia, Belanda, Belgia, dan Afrika Selatan. 
+      <br><br><br><br><br><p>Selain Amerika Serikat dan kawasan Asia,  negara-negara yang pernah mengalami wabah flu burung antara lain Skotlandia, Inggris, Kanada, Australia, Jerman, Irlandia, Meksiko, Italia, Belanda, Belgia, dan Afrika Selatan.  
     </p>
     </div>
     <div class="w3-col m6 w3-center w3-padding-large">
