--- a/tentang wabah.html
+++ b/tentang wabah.html
@@ -206,7 +206,7 @@ Flu burung menular melalui kontak langsung dengan unggas yang sakit atau lingkun
   <div class="w3-row w3-padding-32">
       <div class="w3-third">
         <p>4. Harus makan makanan sehat</p>
-        <img src="makanansehat2.png" class="w3-round w3-margin-bottom" alt="Makanan sehat" style="width:60%">
+        <img src="makanansehat2.jpg" class="w3-round w3-margin-bottom" alt="Makanan sehat" style="width:60%">
       </div>
       <div class="w3-third">
         <p>5. Harus istirahat</p>
