--- a/about us.html
+++ b/about us.html
@@ -83,8 +83,8 @@ body, html {
     <div class="w3-card-4 w3-margin w3-round w3-hover-dark-gray w3-center">
       <img src="Foto irza.jpeg" style="width:100%">
         <div class="w3-container">
-           <h5>Irza Muhamma</h5>
-          <p><b>Co-Leader</b></p>
+           <h5>Irza Muhammad Pratama</h5>
+          <p><b>Leader</b></p>
           <p><a href="https://hilmidaffaw.github.io" class="fa fa-github w3-hover-opacity"> hilmidaffaw </a></p>
         </div>
     </div>
@@ -105,7 +105,7 @@ body, html {
     <div class="w3-card-4 w3-margin w3-round w3-hover-dark-gray w3-center">
       <img src="foto alvin.jpeg" style="width:100%">
         <div class="w3-container">
-          <p>Alvin Taniharja</p>
+          <h5>Alvin Taniharja</h5>
           <p><b>Content Manager</b></p>
           <p><a href="https://alvintaniharja.github.io" class="fa fa-github w3-hover-opacity"> alvintaniharja </a></p>
         </div>
@@ -116,7 +116,7 @@ body, html {
     <div class="w3-card-4 w3-margin w3-round w3-hover-dark-gray w3-center">
       <img src="Foto brigi.jpeg" style="width:100%">
         <div class="w3-container">
-          <p>Brigitta Natasha Widiaputri</p>
+          <h5>Brigitta Natasha Widiaputri</h5>
           <p><b>Content Manager</b></p>
           <p><a href="https://brigittanatashap.github.io" class="fa fa-github w3-hover-opacity"> BrigittaNatashaP </a></p>
         </div>
@@ -131,7 +131,7 @@ body, html {
     <div class="w3-card-4 w3-margin w3-round w3-hover-dark-gray w3-center">
       <img src="Foto Sabina.jpeg" style="width:100%">
         <div class="w3-container">
-          <p>Sabina Cahya Rianti</p>
+          <h5>Sabina Cahya Rianti</h5>
           <p><b>Content Manager</b></p>
           <p><a href="https://sabinacahya.github.io" class="fa fa-github w3-hover-opacity"> sabinacahya </a></p>
         </div>
@@ -142,7 +142,7 @@ body, html {
     <div class="w3-card-4 w3-margin w3-round w3-hover-dark-gray w3-center">
       <img src="foto krisna.jpeg" style="width:100%">
         <div class="w3-container">
-          <p>Krisna Yudha Pradana</p>
+          <h5>Krisna Yudha Pradana</h5>
           <p><b>Programmer</b></p>
           <p><a href="https://krisnayudha64.github.io" class="fa fa-github w3-hover-opacity"> krisnayudha64 </a></p>
         </div>
@@ -153,7 +153,7 @@ body, html {
     <div class="w3-card-4 w3-margin w3-round w3-hover-dark-gray w3-center">
       <img src="Foto imel.jpeg" style="width:100%">
         <div class="w3-container">
-          <p>Maretia Imelda</p>
+          <h5>Maretia Imelda</h5>
           <p><b>Programmer</b></p>
            <p><a href="https://instagram.com/imell_444/" class="fa fa-instagram w3-hover-opacity"> @imell_444 </a></p>
         </div>
@@ -164,9 +164,9 @@ body, html {
     <div class="w3-card-4 w3-margin w3-round w3-hover-black w3-center">
       <img src="Foto dini.jpeg" style="width:100%">
         <div class="w3-container">
-          <a href=""></a><p>Rahmania Nur Diniyah</p>
+          <h5>Rahmania Nur Diniyah</h5>
           <p><b>Programmer</b></p>
-          <p><a href="https://instagram.com/rahmaniand29/" class="fa fa-instagram w3-hover-opacity"> @rahmania29 </a></p>
+          <p><a href="https://instagram.com/rahmaniand29/" class="fa fa-instagram w3-hover-opacity"> @rahmaniand29 </a></p>
         </div>
     </div>
   </div>
