--- a/about us.html
+++ b/about us.html
@@ -81,7 +81,7 @@ body, html {
 <div class="w3-row">
   <div class="w3-col l3 s6 w3-white">
     <div class="w3-card-4 w3-margin w3-round w3-hover-dark-gray w3-center">
-      <img src="Foto irza.jpeg" style="width:100%">
+      <img src="foto irza.jpeg" style="width:100%">
         <div class="w3-container">
            <h5>Irza Muhammad Pratama</h5>
           <p><b>Leader</b></p>
@@ -114,7 +114,7 @@ body, html {
 
   <div class="w3-col l3 s6 w3-white">
     <div class="w3-card-4 w3-margin w3-round w3-hover-dark-gray w3-center">
-      <img src="Foto brigi.jpeg" style="width:100%">
+      <img src="foto brigi.jpeg" style="width:100%">
         <div class="w3-container">
           <h5>Brigitta Natasha Widiaputri</h5>
           <p><b>Content Manager</b></p>
@@ -129,7 +129,7 @@ body, html {
 <div class="w3-row">
   <div class="w3-col l3 s6 w3-white">
     <div class="w3-card-4 w3-margin w3-round w3-hover-dark-gray w3-center">
-      <img src="Foto Sabina.jpeg" style="width:100%">
+      <img src="foto sabina.jpeg" style="width:100%">
         <div class="w3-container">
           <h5>Sabina Cahya Rianti</h5>
           <p><b>Content Manager</b></p>
@@ -151,7 +151,7 @@ body, html {
 
   <div class="w3-col l3 s6 w3-white">
     <div class="w3-card-4 w3-margin w3-round w3-hover-dark-gray w3-center">
-      <img src="Foto imel.jpeg" style="width:100%">
+      <img src="foto imel.jpeg" style="width:100%">
         <div class="w3-container">
           <h5>Maretia Imelda</h5>
           <p><b>Programmer</b></p>
@@ -162,7 +162,7 @@ body, html {
 
   <div class="w3-col l3 s6 w3-white">
     <div class="w3-card-4 w3-margin w3-round w3-hover-black w3-center">
-      <img src="Foto dini.jpeg" style="width:100%">
+      <img src="foto dini.jpeg" style="width:100%">
         <div class="w3-container">
           <h5>Rahmania Nur Diniyah</h5>
           <p><b>Programmer</b></p>
