--- a/penanggulangan.html
+++ b/penanggulangan.html
@@ -91,64 +91,61 @@ body, html {
 
 <!-- Container (About Section) -->
 <div class="w3-content w3-container w3-padding-64" id="about">
-  <h3 class="w3-center">FLU BURUNG</h3>
-  <p class="w3-center"><em>H5N1</em></p>
-  <p>Flu burung adalah infeksi virus yang menyerang bukan hanya burung, tetapi juga manusia, dan hewan lain. Namun sebagian besar adalah unggas. H5N1 adalah bentuk paling umum dari flu burung.</p>
-  <div class="w3-row">
+  <div>
+      <h4 class="w3-center"><b>Peran Pemerintah dalam Menanggapi Flu Burung</b></h4>
+    </div>
     <div class="w3-col m6 w3-center w3-padding-large">
-      <p><b><i class="fa fa-user w3-margin-right"></i>Cara Penanggulangan</b></p><br>
       <img src="tanggap flu burung.jpg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="tanggap flu burung.jpg" width="500" height="333">
     </div>
 
     <!-- Hide this text on small devices -->
-    <div class="w3-col m6 w3-padding-large">
-      <p>Peran Pemerintah dalam menanggapi flu burung
 
+    <div class="w3-col m6 w3-padding-large; w3-container w3-justify">
 
-Pemerintah menyusun strategi baru untuk menyetop penyebaran flu burung yang terus merenggut korban jiwa. Satu di antaranya dengan memusnahkan unggas di perkotaan yang berada dalam radius satu kilometer dari unggas yang dipastikan terjangkit virus avian influenza.
+      <p>Pemerintah menyusun strategi baru untuk menyetop penyebaran flu burung yang terus merenggut korban jiwa. Satu di antaranya dengan memusnahkan unggas di perkotaan yang berada dalam radius satu kilometer dari unggas yang dipastikan terjangkit virus avian influenza.</p>
 
-
-Pemerintah juga akan memvaksinasi setiap unggas di radius tiga kilometer dari unggas yang terjangkit flu burung. Hal ini terutama akan dilakukan di perkotaan di lima provinsi yakni Jawa Barat, DKI Jakarta, Lampung, Banten, dan Jawa Tengah. Persediaan obat antiflu burung atau Tamiflu pun akan ditambah. Saat ini pemerintah mempunyai persediaan 160.000 tablet Tamiflu dan rencananya ditambah lagi 200.000 tablet.
-
-
-Pemerintah akan melibatkan semua masyarakat demi lancarnya program ini. Strategi lain adalah mengendalikan penyebaran wabah maupun infeksi baru pada unggas. Salah satu caranya dengan menjaga sanitasi kandang sehingga kelompok berisiko tinggi seperti peternak juga dapat terhindar dari virus avian influenza.
-
-
-Presiden meminta masyarakat tak perlu resah namun tetap waspada terhadap penyakit yang bersumber pada unggas itu. Lebih lanjut, presiden juga meminta masyarakat agar tidak mudah terpengaruh isu-isu yang menyesatkan mengenai flu burung. Pemerintah berupaya melindungi warga serta sumberdaya hayati hewan, khususnya di wilayah NKRI, dari penyakit hewan menular utama flu burung (Avian influenza/AI) dengan melakukan berbagai langkah antisipasi melalui pengendalian terhadap lalu lintas ternak unggas dan produk unggas dari dan ke wilayah NKRI secara ketat. Sebagai contoh, pada 27 April 2005, Departemen Pertanian melalui Dirjen Peternakan mengeluarkan Surat Edaran No. 1403/HK.340/F/04.2005 tentang pelarangan pemasukan komoditas unggas, bahan asal unggas dan asil bahan asal unggas dari Malaysia ke dalam wilayah negara Republik Indonesia. Seperti himbauan Pemerintah, warga tidak perlu takut mengkonsumsi telur dan daging ayam serta produk ternak unggas lainnya. Sebab, bila dimasak dengan benar penyakit flu burung tidak perlu dikhawatirkan.
-
-
-Konsumsi produk ternak unggas dengan aman. Untuk mengkonsumsi daging ayam, masak daging pada suhu mendidih lebih dari 1 menit, karena virus AI akan mati pada suhu 80 derajat celcius pada pemanasan selama 1 menit. Sedangkan untuk merebus telur dapat dilakukan pada suhu di atas 64 derajat celcius selama 6 menit, karena virus akan mati pada suhu 64 derajat celcius pada pemanasan selama 4,5 menit).
-
-Peningkatan biosekuriti
-Vaksinasi
-Depopulasi (pemusnahan terbatas atau selektif) di daerah tertular
-Pengendalian lalu lintas keluar masuk unggas
-Surveillans dan penelusuran (tracking back)
-Pengisian kandang kembali (restocking)
-Stamping out (pemusnahan menyeluruh) di daerah tertular baru
-Peningkatan kesadaran masyarakat (public awareness)
-Monitoring dan evaluasi
-Adapun cara untuk meningkatan kesadaran masyarakat (public awareness) yaitu dengan cara :
-
-Jagalah agar ternak unggas dalam kondisi baik, antara lain, mempunyai akses ke air bersih dan makanan yang memadai, kandang yang memadai, menerima produk-produk yang bebas cacing dan sudah divaksinasi
-Jagalah ternak agar selalu berada di lingkungan yang terlindung
-Periksalah barang-barang yang masuk ke dalam peternakan
-Peliharalah ternak di tempat yang terlindungi
-Jangan membeli atau menerima hewan baru ke dalam peternakan
-Batasi dan kendalikan orang yang masuk ke peternakan
-Menyapu pekarangan, membersihkan kandang, peralatan, dan sepeda motor secara berkala
-Menyimpan pupuk kandang (jauhkan dari kolam, sumur, dll)
-</p>
+      <p>Pemerintah juga akan memvaksinasi setiap unggas di radius tiga kilometer dari unggas yang terjangkit flu burung. Hal ini terutama akan dilakukan di perkotaan di lima provinsi yakni Jawa Barat, DKI Jakarta, Lampung, Banten, dan Jawa Tengah. Persediaan obat antiflu burung atau Tamiflu pun akan ditambah. Saat ini pemerintah mempunyai persediaan 160.000 tablet Tamiflu dan rencananya ditambah lagi 200.000 tablet.</p>
     </div>
+<div class="w3-container w3-justify">
+    <div>
+  <p>Pemerintah akan melibatkan semua masyarakat demi lancarnya program ini. Strategi lain adalah mengendalikan penyebaran wabah maupun infeksi baru pada unggas. Salah satu caranya dengan menjaga sanitasi kandang sehingga kelompok berisiko tinggi seperti peternak juga dapat terhindar dari virus avian influenza.</p>
+
+  <p>Presiden meminta masyarakat tak perlu resah namun tetap waspada terhadap penyakit yang bersumber pada unggas itu. Lebih lanjut, presiden juga meminta masyarakat agar tidak mudah terpengaruh isu-isu yang menyesatkan mengenai flu burung. Pemerintah berupaya melindungi warga serta sumberdaya hayati hewan, khususnya di wilayah NKRI, dari penyakit hewan menular utama flu burung (Avian influenza/AI) dengan melakukan berbagai langkah antisipasi melalui pengendalian terhadap lalu lintas ternak unggas dan produk unggas dari dan ke wilayah NKRI secara ketat. Sebagai contoh, pada 27 April 2005, Departemen Pertanian melalui Dirjen Peternakan mengeluarkan <b>Surat Edaran No. 1403/HK.340/F/04.2005</b> tentang pelarangan pemasukan komoditas unggas, bahan asal unggas dan asil bahan asal unggas dari Malaysia ke dalam wilayah negara Republik Indonesia. Seperti himbauan Pemerintah, warga tidak perlu takut mengkonsumsi telur dan daging ayam serta produk ternak unggas lainnya. Sebab, bila dimasak dengan benar penyakit flu burung tidak perlu dikhawatirkan.</p>
+
+  <p>Konsumsi produk ternak unggas dengan aman. Untuk mengkonsumsi daging ayam, masak daging pada suhu mendidih lebih dari 1 menit, karena virus AI akan mati pada suhu 80 derajat celcius pada pemanasan selama 1 menit. Sedangkan untuk merebus telur dapat dilakukan pada suhu di atas 64 derajat celcius selama 6 menit, karena virus akan mati pada suhu 64 derajat celcius pada pemanasan selama 4,5 menit).</p>
+</div>
+
+  <b><p>Prinsip dasar yang diterapkan dalam pencegahan, pengendalian, dan pemberantasan Avian influenza atau flu burung, adalah:</p> </b>
+<div class="w3-container w3-center">
+    <div class="w3-gray"> <p class="w3-text-white">Mencegah kontak antara hewan peka dengan virus AI (Avian influenza)</p> </div>
+  <p>Menghentikan produksi virus AI oleh unggas tertular (menghilangkan virus AI dengan dekontaminasi/ disinfeksi)</p>
+  <div class="w3-gray"> <p class="w3-text-white"> Meningkatkan resistensi (pengebalan) dengan vaksinasi</p> </div>
+  <p>Menghilangkan sumber penularan virus</p>
+  <div class="w3-gray"> <p class="w3-text-white"> Peningkatan kesadaran masyarakat (public awareness)</p> </div>
+</div>
+<br><br><img src="Vaksinasi.jpg" alt="vaksinasi.jpg" width="400" height="333"> 
+<div class="w3-col m6 w3-padding-large">
+Dalam pelaksanaannya, dapat dilakukan melalui 9 tindakan yang merupakan satu kesatuan satu sama lainnya yang tidak dapat dipisahkan, yaitu:
+  <li>Peningkatan biosekuriti</li>
+  <li>Vaksinasi</li>
+  <li>Depopulasi di daerah tertular</li>
+  <li>Pengendalian lalu lintas keluar masuk unggas</li>
+  <li>Surveillans dan penelusuran (tracking back)</li>
+  <li>Pengisian kandang kembali (restocking)</li>
+  <li>Stamping out di daerah tertular baru</li>
+  <li>Peningkatan kesadaran masyarakat (public awareness)</li>
+  <li>Monitoring dan evaluasi</li>
+</div>
+</div>  
     <div class="w3-col m6 w3-padding-large">
       <p>Action plan yang dapat dilakukan untuk meminimalisir penyebaran wabah flu burung yaitu:
 </p>
 <li>Tracing masyarakat yang datang dari wilayah yang terinfeksi virus flu burung.</li>    
-<li>Menahan pergerakan masyarakat di daerah yang terindikasi terinfeksi.</li>
+<li>Menahan pergerakan masyarakat di daerah terinfeksi.</li>
 <li>Pemantauan peternakan unggas-unggas yang berpotensi terinfeksi.</li>
     </div>
     <div class="w3-col m6 w3-padding-large">
-      <p>Prinsip dasar yang diterapkan dalam pencegahan, pengendalian, dan pemberantasan Avian Influenza atau flu burung, antara lain:
+      <p>Prinsip dasar yang diterapkan dalam pencegahan, pengendalian, dan pemberantasan Avian Influenza atau flu burung, adalah:
 </p>
 <li>Mencegah kontak antara hewan peka dengan virus AI (Avian Influenza).</li>
 <li>Menghentikan produksi virus AI oleh unggas tertular (menghilangkan virus AI dengan dekontaminasi/ disinfeksi).</li>
@@ -157,8 +154,12 @@ Menyimpan pupuk kandang (jauhkan dari kolam, sumur, dll)
 <li>Peningkatan kesadaran masyarakat (public awareness).</li>
     </div>
     <div>
+      <h4 class="w3-center"><b>Cara Meningkatkan Kesadaran Masyarakat</b></h4>
+    </div>
+
+    <div>
 <p>
- Adapun beberapa cara yang dilakukan untuk meningkatan kesadaran masyarakat (public awareness) yaitu dengan cara cara seperti:
+ Adapun cara untuk meningkatan kesadaran masyarakat (public awareness) yaitu dengan cara :
 </p>
       <li>Jagalah agar ternak unggas dalam kondisi baik, antara lain, mempunyai akses ke air bersih dan makanan yang memadai, kandang yang memadai, menerima produk-produk yang bebas cacing dan sudah divaksinasi</li>
       <li>Jagalah ternak agar selalu berada di lingkungan yang terlindung</li>
@@ -186,7 +187,7 @@ Menyimpan pupuk kandang (jauhkan dari kolam, sumur, dll)
     <i class="fa fa-twitter w3-hover-opacity"></i>
     <i class="fa fa-linkedin w3-hover-opacity"></i>
   </div>
-  <p>Thank you<a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+  <p>Created by Irza Muhammad Pratama, Alvin Taniharja & Maretia Imelda</p><br><p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 </footer>
  
 <script>
