--- a/penanggulangan.html
+++ b/penanggulangan.html
@@ -153,24 +153,36 @@ Dalam pelaksanaannya, dapat dilakukan melalui 9 tindakan yang merupakan satu kes
 <li>Menghilangkan sumber penularan virus.</li>
 <li>Peningkatan kesadaran masyarakat (public awareness).</li>
     </div>
+   <br>
     <div>
       <h4 class="w3-center"><b>Cara Meningkatkan Kesadaran Masyarakat</b></h4>
     </div>
-
     <div>
 <p>
  Adapun cara untuk meningkatan kesadaran masyarakat (public awareness) yaitu dengan cara :
 </p>
-      <li>Jagalah agar ternak unggas dalam kondisi baik, antara lain, mempunyai akses ke air bersih dan makanan yang memadai, kandang yang memadai, menerima produk-produk yang bebas cacing dan sudah divaksinasi</li>
+      <li>Jagalah agar ternak unggas dalam kondisi baik </li>
       <li>Jagalah ternak agar selalu berada di lingkungan yang terlindung</li>
       <li>Periksalah barang-barang yang masuk ke dalam peternakan</li>
       <li>Peliharalah ternak di tempat yang terlindungi</li>
       <li>Jangan membeli atau menerima hewan baru ke dalam peternakan</li>
       <li>Batasi dan kendalikan orang yang masuk ke peternakan</li>
       <li>Sapu pekarangan, bersihkan kandang, peralatan, sepeda motor secara berkala</li>
-      <li>Simpan pupuk kandang (jauhkan dari kolam, sumur, dll)</li>
+      <li>Simpan pupuk kandang (Jauhkan dari kolam, sumur, dll.)</li>
 
     </div>
+    <br> <br>
+    <div>
+      <h4 class="w3-center"><b>Action Plan</b></h4>
+    </div>
+    <div>
+      <p>Action plan yang dapat dilakukan untuk meminimalisir penyebaran wabah flu burung yaitu:
+</p>
+<li>Tracing masyarakat yang datang dari wilayah yang terinfeksi virus flu burung.</li>    
+<li>Menahan pergerakan masyarakat di daerah terinfeksi.</li>
+<li>Pemantauan peternakan unggas-unggas yang berpotensi terinfeksi.</li>
+    </div>
+
       </form>
     </div>
   </div>
