--- a/penanggulangan.html
+++ b/penanggulangan.html
@@ -136,7 +136,8 @@ Dalam pelaksanaannya, dapat dilakukan melalui 9 tindakan yang merupakan satu kes
   <li>Peningkatan kesadaran masyarakat (public awareness)</li>
   <li>Monitoring dan evaluasi</li>
 </div>
-   <br>
+ </div>  
+    <br>
     <div>
       <h4 class="w3-center"><b>Cara Meningkatkan Kesadaran Masyarakat</b></h4>
     </div>
